# wpctf2025

./: .editorconfig  .gitattributes  .gitignore  README.md  build_all.sh
challenges/crypto/hard/spy-infiltration/: .zipignore  Dockerfile  README.md  build.sh  exploit.py  flag.txt  main.py  requirements.txt  secret.txt  walkthrough.md
challenges/crypto/medium/the-admins-new-credentials/: .gitignore  .zipignore  Dockerfile  Makefile  README.md  build.sh  exploit.sh  flag.txt  walkthrough.md
challenges/misc/easy/charger-confessions-part-1/: Dockerfile  README.md  build.sh  flag.txt  walkthrough.md
challenges/misc/easy/charger-confessions-part-2/: README.md  flag.txt
challenges/misc/easy/host-collector/: Dockerfile  README.md  build.sh  exploit.sh  flag.txt  walkthrough.md
challenges/misc/easy/infection-chain/: README.md  flag.txt
challenges/misc/easy/shadow-garden/: README.md  flag.txt  requirements.txt  solver.py  ιηтrσ.mkv
challenges/misc/hard/once-upon-a-dev-with-a-fistful-of-pixels/: README.md  flag.txt
challenges/misc/medium/blockchain/: .gitignore  Dockerfile  README.md  build.sh  entrypoint.sh  flag.txt  walkthrough.md
challenges/misc/medium/choosing-the-right-words/: .gitattributes  Dockerfile  README.md  build.sh  flag.txt  walkthrough.md
challenges/misc/medium/collateral-damage/: README.md  build.sh  flag.txt
challenges/osint/easy/yellow-plate-trace/: README.md  flag.txt  walkthrough.md
challenges/osint/hard/get-the-quote/: README.md  flag.txt
challenges/pwn/easy/system_information/: .gitignore  Dockerfile  README.md  build.sh  exploit.sh  flag.txt  walkthrough.md
challenges/pwn/hard/wpctftpd/: Dockerfile  Dockerfile.build  README.md  build.sh  exploit.py  flag.txt  walkthrough.md
challenges/pwn/hard/wpctftpd/src/: CMakeLists.txt  dump_session.py  dump_wp_pool.py  main.c  test_wp_pool.c  wp_ftp_command.c  wp_ftp_session.c  wp_pool.c
challenges/pwn/hard/wpctftpd/src/include/: conf.h  os.h  wp_ftp_command.h  wp_ftp_session.h  wp_pool.h
challenges/pwn/medium/pwnlemetry/: Dockerfile  Makefile  README.md  build.sh  exploit.py  walkthrough.md
challenges/reversing/easy/win12_license_checker/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  encode_flag.py  exploit.py  flag.txt  walkthrough.md
challenges/reversing/medium/matrioscar/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  exploit.py  flag.txt  pyproject.toml  walkthrough.md
challenges/reversing/medium/matrioscar/matrioscar_py/: main.py
challenges/reversing/medium/matrioscar/src/: lib.rs
challenges/warmup/: README.md  flag.txt
challenges/web/easy/ping-checker/: .zipignore  Dockerfile  README.md  build.sh  exploit.py  flag.txt  walkthrough.md
challenges/web/easy/you-shall-not-pass/: Dockerfile  README.md  app.py  build.sh  database.db  flag.txt  init.sql  init_db.py  requirements.txt  (+1 more)
challenges/web/medium/monitoring-dashboard/src/proxy/: .env  Cargo.toml
challenges/web/medium/monitoring-dashboard/src/proxy/src/: auth.rs  hosts.rs  main.rs  proxy_config.rs  session_auth.rs
(+126 files in other folders)
