[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "matrioscar-1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin[patchelf]>=1.9.6",
    "pycryptodome>=3.23.0",
    "pyinstaller>=6.16.0",
]
